# tabasco

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
configs/: train.yaml
configs/callbacks/: dataset_stats.yaml  default.yaml  ema.yaml  mol_metrics.yaml  posebusters_metrics.yaml  save_mols.yaml
configs/datamodule/: lmdb_datamodule.yaml
configs/globals/: globals.yaml
configs/lightning_module/: lightning_tabasco.yaml
configs/logger/: wandb.yaml
configs/model/: flow_model.yaml
configs/paths/: default.yaml
configs/trainer/: ddp.yaml  default.yaml
src/: sample.py  sample_uff_bounds.py  train.py
src/tabasco/: __init__.py
src/tabasco/callbacks/: __init__.py  dataset_stats.py  ema.py  molecule_metrics.py  posebusters.py  save_molecules.py
src/tabasco/chem/: constants.py  convert.py  utils.py
src/tabasco/data/: lmdb_datamodule.py  transforms.py  utils.py
src/tabasco/data/components/: lmdb_base.py  lmdb_unconditional.py
src/tabasco/flow/: interpolate.py  path.py  time_factor.py  utils.py
src/tabasco/models/: flow_model.py  lightning_tabasco.py
src/tabasco/models/components/: attention.py  common.py  losses.py  positional_encoder.py  transformer.py  transformer_module.py  transition.py
src/tabasco/sample/: guided_sampling.py  interpolant_guidance.py  noise_schedule.py
src/tabasco/utils/: __init__.py  instantiators.py  metric_utils.py  metrics.py  rich_utils.py  utils.py
